# glaucoma

./: .gitignore  COMPARISON_GUIDE.md  README.md  README_MULTISOURCE_DOMAIN_ADAPTATION.md  REFACTORING_SUMMARY.md  descr_stat_datasets.ipynb  progression.py  project_structure.md  pyproject.toml  requirements.txt  segmentation_classification.py  setup_dev.ps1  test_comparison_script.py  test_optimizations.py  training_log_u-net-first-10-epochs.txt
.github/workflows/: ci-cd.yml
configs/: classification_config.yaml
dataset_analysis_results/dataset_analysis_20250626_190413/: detailed_analysis_20250626_190413.json
docs/: fine_tuning_strategies.md
multitask_results/: aggregate_results.py
multitask_training_logs/: training_log_20250406_114408.txt  training_log_20250419_095057.txt
notebooks/: CDR-classification.py  enhanced_preprocessing_demo.py
scripts/: analyze_fairness_results.py  calibrate_models.py  compare_experiments.py  dataset_analysis.py  evaluate.ps1  evaluate_fairness.py  evaluate_id.py  evaluate_id_dann.py  evaluate_multisource.py  evaluate_ood.py  evaluate_ood_dann.py  evaluate_trained_model.py  extract_features.py  extract_vcdr_labels.py  fine_tuning_comparison.ps1  generate_combined_t-sne.py  multisource_domain_finetuning.py  plot_ood_results.py  preprocess_data.py  preprocessing.py  progression_prediction.py  quick_baseline_and_da.ps1  recover_results.py  regularization.ps1  resume_vfm_experiments.ps1  run_calibration.py  run_dataset_analysis.bat  run_dataset_analysis.ps1  run_enhanced_dataset_analysis.py  run_evaluation.py  run_fairness_evaluation.ps1  run_fine_tuning_comparison.py  run_multitask_pipeline.sh  run_visualization.py  summarize_results.py  test_calibration.py  test_default_behavior.py  test_duplicate_prevention.py  test_fine_tuning.py  test_imports.py  (+15 more)
scripts/evaluation_results/: compare_da_methods.py
src/utils/: paths.py  (+8 more)
tests/: run_test_analysis.py  test_basic.py  test_comprehensive.py  test_data_loading.py  test_integration.py  test_metrics_fixed.py  test_model_building.py  test_training.py
training_logs/: training_log_20250406_110256.txt
(+18 files in other folders)
