[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multisource-glaucoma-classification"
version = "1.0.0"
description = "Multi-Source Domain Adaptation for Glaucoma Classification using Vision Foundation Models"
authors = [
    {name = "Michiel Ghesquiere", email = "michiel.ghesquiere@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision",
    "numpy",
    "pandas",
    "scikit-learn",
    "matplotlib",
    "seaborn",
    "tqdm",
    "Pillow",
    "pyyaml",
    "opencv-python",
    "umap-learn",
    "tensorboard",
    "wandb",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black",
    "isort",
    "flake8",
]

[project.urls]
Homepage = "https://github.com/MichielGhesquiere/glaucoma"
Documentation = "https://github.com/MichielGhesquiere/glaucoma#readme"
Repository = "https://github.com/MichielGhesquiere/glaucoma"
Issues = "https://github.com/MichielGhesquiere/glaucoma/issues"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["src"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
